--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "1.3.5",
+    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "2.2.3",
