--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-number-format": "^5.1.4",
     "react-redux": "^8.0.5",
     "react-router": "6.10.0",
+    "react-router-dom": "6.10.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "redux-persist": "^6.0.0",
